Complete initialisation of sensor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ authors = ["Pete Kubiak <peter.kubiak@dyson.com>"]
 [dependencies]
 thiserror = { version = "2.0.11", default-features = false }
 embedded-hal-async = "*"
+defmt = "0.3.10"
