--- a/examples/esp32c6/Cargo.toml
+++ b/examples/esp32c6/Cargo.toml
@@ -31,6 +31,7 @@ embassy-sync = { version = "0.6.2", features = ["defmt"] }
 embedded-hal-bus = { version = "0.3.0", features = ["async", "defmt-03"] }
 embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
 embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
+format_no_std = "1.2.0"
 
 [profile.dev]
 # Rust debug is too slow.
