--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -1,19 +1,32 @@
 ---
-name: Continuous Build
-on:
-  pull_request:
-    branches:
-      - main
-  workflow_call:
-
-jobs:
-  All_Targets:
-    name: All Targets Build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build
-        run: cargo build --all-targets --all-features
+    name: Continuous Build
+    on:
+      pull_request:
+        branches:
+          - main
+      workflow_call:
+    
+    jobs:
+      All_Targets:
+        name: All Targets Build (src)
+        runs-on: ${{ matrix.os }}
+        strategy:
+          matrix:
+            os: [ubuntu-latest, windows-latest, macos-latest]
+        steps:
+          - uses: actions/checkout@v4
+          - name: Build
+            run: cargo build --all-targets --all-features
+            
+      All_Targets_ESP32C6:
+        name: All Targets Build (Esp32c6)
+        runs-on: ${{ matrix.os }}
+        strategy:
+                matrix:
+                  os: [ubuntu-latest, windows-latest, macos-latest]
+              steps:
+                - uses: actions/checkout@v4
+                - name: Build
+                  run: |
+                    cd examples/esp32c6
+                    cargo build --all-targets --all-features
