--- a/.github/workflows/continuous-build.yaml
+++ b/.github/workflows/continuous-build.yaml
@@ -12,18 +12,18 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest] #TODO: Add Windows (See Issue) https://github.com/dysonltd/paa5100je-pwm3901/issues/8
     steps:
       - uses: actions/checkout@v4
       - name: Build
-        run: cargo build --all-targets --all-features
+        run: cargo build --all-targets --all-features 
 
   Examples:
     name: ESP32C6 Example
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest macos-latest] #TODO: Add Windows (See Issue) https://github.com/dysonltd/paa5100je-pwm3901/issues/8
     steps:
       - uses: actions/checkout@v4
       - name: Build
