--- a/examples/esp32c6/Cargo.toml
+++ b/examples/esp32c6/Cargo.toml
@@ -22,8 +22,8 @@ esp-backtrace = { version = "0.15.0", features = [
   "exception-handler",
   "panic-handler",
 ] }
-esp-hal = { version = "0.23.1", features = ["defmt", "esp32c6", "unstable"] }
-esp-hal-embassy = { version = "0.6.0", features = ["esp32c6"] }
+esp-hal = { version = "1.0.0-beta.0", features = ["defmt", "esp32c6", "unstable"] }
+esp-hal-embassy = { version = "0.7.0", features = ["esp32c6"] }
 static_cell = { version = "2.1.0", features = ["nightly"] }
 
 paa5100je-pmw3901 = { path = "../../" }
