--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -7,6 +7,7 @@ version: 2
 updates:
   - package-ecosystem: "cargo"
     directories:
+      - "/" # Library Crate      
       - "**/*"
     schedule:
       interval: "weekly"
