--- a/.github/workflows/mega-linter.yaml
+++ b/.github/workflows/mega-linter.yaml
@@ -169,6 +169,8 @@ jobs:
         run: cargo fmt --manifest-path Cargo.toml -- --check
       - name: Rustfmt check on esp32c6 example
         run: |
+          # Ensure the nightly toolchain is used for formatting
+          rustup toolchain install nightly
           cd examples/esp32c6
           cargo fmt --manifest-path Cargo.toml -- --check
 
@@ -180,5 +182,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Clippy check on esp32c6 example
         run: |
+          # Ensure the nightly toolchain is used for Clippy
+          rustup toolchain install nightly
           cd examples/esp32c6
           cargo clippy -- -D warnings
